--- a/blocks/new.css
+++ b/blocks/new.css
@@ -62,7 +62,7 @@
 @media screen and (min-width: 1124px){
     .new__container{
       grid-template-columns: repeat(3, max-content);
-      padding-bottom: 4.5rem;
+      padding-bottom: 6.2rem;
       gap: 4.5rem;
     }
 
