--- a/blocks/products.css
+++ b/blocks/products.css
@@ -10,7 +10,8 @@
 
 .products__img{
     margin-bottom: 1rem;
-
+    width: 270px;
+    height: 360px;
 }
 
 
