--- a/pages/index.css
+++ b/pages/index.css
@@ -112,7 +112,7 @@
 
   @media screen and (min-width: 1023px){
     .section {
-      padding: 7rem 0 2rem;
+      padding: 8.6rem 0 2rem;
     }
 
     .section__title{
@@ -183,6 +183,12 @@
   width: 100vh;
   height: 65vh;
   margin: 0 auto;
+}
+
+@media screen and (min-width:1124px){
+  .swiper-wrapper {
+    height: 55vh;
+  }
 }
 
 .swiper-button-prev::after,
